# computer_graphics

2_triangles/: CMakeLists.txt  main.cpp  shader.vert  triangle1.frag  triangle2.frag
OGL_tutorials/ogl-2.1_branch/: CMakeLists.txt
OGL_tutorials/ogl-2.1_branch/RESULTS/: CMakeCache.txt  cmake_install.cmake  launch-misc05_picking_BulletPhysics-RelWithDebInfo.sh  launch-misc05_picking_BulletPhysics-Release.sh  launch-misc05_picking_custom-Debug.sh  launch-misc05_picking_custom-MinSizeRel.sh  launch-misc05_picking_custom-Release.sh  launch-misc05_picking_slow_easy-Debug.sh  launch-misc05_picking_slow_easy-MinSizeRel.sh  launch-misc05_picking_slow_easy-Release.sh  launch-playground-Release.sh  launch-tutorial01_first_window-MinSizeRel.sh  launch-tutorial02_red_triangle-Debug.sh  launch-tutorial02_red_triangle-RelWithDebInfo.sh  launch-tutorial03_matrices-RelWithDebInfo.sh  launch-tutorial03_matrices-Release.sh  launch-tutorial04_colored_cube-Debug.sh  launch-tutorial05_textured_cube-MinSizeRel.sh  launch-tutorial06_keyboard_and_mouse-Debug.sh  launch-tutorial06_keyboard_and_mouse-RelWithDebInfo.sh  launch-tutorial07_model_loading-Debug.sh  launch-tutorial07_model_loading-MinSizeRel.sh  launch-tutorial07_model_loading-RelWithDebInfo.sh  launch-tutorial08_basic_shading-Debug.sh  launch-tutorial08_basic_shading-RelWithDebInfo.sh  launch-tutorial09_several_objects-Debug.sh  launch-tutorial09_several_objects-MinSizeRel.sh  launch-tutorial09_several_objects-RelWithDebInfo.sh  launch-tutorial09_vbo_indexing-Debug.sh  (+33 more)
cube_like/: CMakeLists.txt  fragment.frag  main.cpp  vertice.vert
shooter/: CMakeLists.txt  ColorFragment.frag  ColorVertex.vert  main.cpp
shooter/common/: shader.cpp  shader.hpp  texture.hpp
triangle_camera/: CMakeLists.txt  main.cpp  shader.vert
(+18 files in other folders)
